--- a/index.html
+++ b/index.html
@@ -260,6 +260,41 @@
     </div>
 </div>
 
+<div class="footer">
+    <div class="main-footer">
+        <div class="inner-footer">
+            <img src="images/logo.png" alt="">
+        </div>
+
+        <div class="inner-footer">
+            <h2>Patient Care</h2>
+            <a href="#">Find a doctor</a>
+            <a href="#">Medical service</a>
+            <a href="#">Patient testimonial</a>
+            <a href="#">Pay online</a>
+            <a href="#">service</a>
+        </div>
+
+        <div class="inner-footer">
+            <h2>News & Media</h2>
+            <a href="#">News</a>
+            <a href="#">Events</a>
+            <a href="#">Interview</a>
+            <a href="#">contact</a>
+            <a href="#">Video</a>
+        </div>
+
+        <div class="inner-footer">
+            <h2>Blogs</h2>
+            <a href="#">Covid 19 Update</a>
+            <a href="#">Covid 19 FAQs</a>
+            <a href="#">Covid 19 Vaccine</a>
+            <a href="#">Covid 19 symptoms</a>
+            <a href="#">library</a>
+        </div>
+    </div>
+</div>
+
 
 
 
